realworld-example-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api
spec:
  rules:
    - host: realworld.local
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 80
            path: /api
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: realworld.local
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
